# TeleBot-4R

./: .gitignore  README.md  initial_posos.txt
Arduino/: gyro.ino
documentation/: params.md  systems.md  topics.md
documentation/telebot/subsystems/: motion.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
sensing/: package.xml  setup.cfg  setup.py
sensing/sensing/: imu.py
src/dynamixel_sdk/: CMakeLists.txt  package.xml
src/dynamixel_sdk/msg/: JointState.msg  MotorState.msg
src/minibot_mirroring/: CMakeLists.txt  package.xml
src/minibot_mirroring/config/: minibot_mirror_config.yaml
src/minibot_mirroring/src/: minibot_mirror.cpp  torquer.cpp
src/minibot_mirroring/test/: test.cpp
src/motion/: CMakeLists.txt  package.xml
src/motion/config/: .ctrlsrcs  driver_lower_config.yaml  driver_lower_flipper_config.yaml  driver_lower_left_config.yaml  driver_lower_right_config.yaml  driver_upper_config.yaml  minibot_config.yaml  multiplexer_config.yaml  params.yaml  readme.md  splitter_config.yaml
src/motion/include/motion/: control_source.hpp  control_source_handler.hpp  driver.hpp  dynamixel_addresses.hpp  dynamixel_driver.hpp  dynamixel_helper.hpp  motion.hpp  roboclaw_driver.hpp  topic_prefixes.hpp
src/motion/launch/: minibot_mirroring.launch  telebot_lower.launch  telebot_upper.launch
src/motion/src/: control_source.cpp  control_source_handler.cpp  driver_lower.cpp  driver_lowerTMP.cpp  driver_upper.cpp  dummy.cpp  dynamixel_driver.cpp  dynamixel_helper.cpp  multiplexer.cpp  splitter.cpp
src/node_utils/: CMakeLists.txt  package.xml
src/node_utils/include/node_utils/: node_utils.hpp
src/node_utils/src/: node_utils.cpp
src/roboclaw_sdk/: CMakeLists.txt  README.md  package.xml
src/roboclaw_sdk/include/roboclaw_sdk/: roboclaw_driver.h
src/roboclaw_sdk/src/: TimeoutSerial.cpp  driver.cpp  roboclaw_driver.cpp
src/telebot_interfaces/: CMakeLists.txt  package.xml
src/telebot_interfaces/include/: message_enums.hpp
src/telebot_interfaces/msg/: JointState.msg  MotorGoal.msg  MotorGoalList.msg  MotorGoals.msg  MotorState.msg  readme.md
src/vision/: package.xml
